[package]
name = "expense-resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# google-sheets4 = "*"
chrono = "0.4"
futures = "0.3.21"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
hyper-tls = "0.5.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"